# math

./: CMakeLists.txt  README.md
.cache/clangd/index/: catch_analyse.cpp.FCC5BC8AD36C312C.idx  catch_analyse.hpp.5A04346977DDF5CD.idx  catch_approx.cpp.8F755B6F87BC94C3.idx  catch_approx.hpp.A4042C80F833770E.idx  catch_assertion_handler.cpp.955A30D385B76A13.idx  catch_assertion_handler.hpp.001128DEC2D1B8F0.idx  catch_assertion_info.hpp.9FA3FFD2E855E652.idx  catch_assertion_result.cpp.8ABB221BAA412DDE.idx  catch_assertion_result.hpp.56D45418362C2FDA.idx  catch_benchmark_function.cpp.F7F60D59824D4358.idx  catch_benchmark_function.hpp.513402A4A28A031B.idx  catch_benchmark_stats.hpp.A305585F7C546309.idx  catch_benchmark_stats_fwd.hpp.1689D3E3C9E6CA9C.idx  catch_case_insensitive_comparisons.cpp.3789B5F6ACEA77A9.idx  catch_case_insensitive_comparisons.hpp.6E3E29F4C4C5EDCD.idx  catch_case_sensitive.hpp.FA33A20258BD6554.idx  catch_chronometer.cpp.8AD37CF626F85024.idx  catch_chronometer.hpp.8AAC42D85E1F0366.idx  catch_clara.cpp.DB96CCC028A07B21.idx  catch_clara.hpp.C5EB0502F2616F02.idx  catch_clock.hpp.573AD4EFDA921E96.idx  catch_commandline.cpp.7B6C47F18114D406.idx  catch_commandline.hpp.9494EB1B3819FF86.idx  catch_compare_traits.hpp.8295C9A77C46B146.idx  catch_compiler_capabilities.hpp.DDCAF50EB9495C7F.idx  catch_complete_invoke.hpp.99B13229A8B6324D.idx  catch_config.cpp.A3DF1B9213F7E6C7.idx  catch_config.hpp.988C10CA2B5C8EF7.idx  catch_config_android_logwrite.hpp.4C4FAAF04C074102.idx  catch_config_counter.hpp.DA1C90F3A2A3CE24.idx  (+239 more)
src/: mat.cpp  mat.h  quat.cpp  vec.cpp  vec.h
(+5 files in other folders)
